--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_screenutil: ^5.6.0
   google_fonts: ^3.0.1
   rive: ^0.9.1
+  animate_gradient: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,7 @@ flutter:
     - assets/translations/
     - assets/svg/
     - assets/png/
+    - assets/jpg/
     - assets/rive/
 
   # fonts:
