--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   animate_gradient: ^0.0.2
   avoid_keyboard: ^0.3.0
   keyboard_visibility_pro: ^0.0.1
+  go_router: ^6.0.0
+  image_fade: ^0.6.2
 
 dev_dependencies:
   flutter_test:
