--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.5
   flutter_secure_storage: ^7.0.1
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
