--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage: ^7.0.1
   firebase_core:
+  firebase_auth: ^4.2.5
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
