--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core:
   firebase_auth: ^4.2.5
   google_sign_in: ^5.4.2
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
