--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   google_sign_in: ^5.4.2
   jwt_decoder: ^2.0.1
   video_player: ^2.4.10
-  # native_video_player: ^1.2.0+3
+  optimized_image_loader: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +46,7 @@ flutter:
   assets:
     - assets/translations/
     - assets/svg/
+    - assets/svg/stars/
     - assets/png/
     - assets/jpg/
     - assets/gif/
