--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   firebase_auth: ^4.2.5
   google_sign_in: ^5.4.2
   jwt_decoder: ^2.0.1
-  video_player: ^2.4.10
+  video_player: ^2.5.1
   pinch_zoom: ^1.0.0
   optimized_image_loader: ^0.0.3
+  better_player: ^0.0.83
 
 dev_dependencies:
   flutter_test:
